# it_job_salary_prediction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/processed/: jobs_processed.parquet.dvc
data/raw/: jobs_raw.csv.dvc
models/: hgb_20260505_1426.pkl.dvc  hgb_20260513_0326.pkl.dvc  random_forest_20260505_1426.pkl.dvc  random_forest_20260513_0326.pkl.dvc  ridge_20260505_1426.pkl.dvc  ridge_20260513_0326.pkl.dvc
scripts/: analyze_permutation_importance.py  benchmark.py  check_health.sh  enrich_seniority.py  merge_raw_datasets.py  merge_raw_datasets_2.py
src/api/: api.py  app.py  model_loader.py
src/benchmark/: benchmark.py  cli.py  reporting.py
src/config/: model_types.py  settings.py
src/model/: model_loader.py  pipeline.py  train_model.py
src/prediction/: cli.py  predict.py  sample_data.py  utils.py
src/preprocessing/: cleaning.py  encoding.py  features.py  preprocess.py  preprocess_data.py  transformers.py
src/scraping/: api_client.py  fetching_page.py  parser.py  run_scrapper.py  save.py  scraper.py
src/scrapping/: scrapper.py
src/tests/: test_cleaning.py  test_pipeline.py  test_predict.py  test_transformers.py
src/training/: train.py
src/utils/: logging_config.py  metrics.py  paths.py  utils.py
tests/: test_api.py  test_benchmark_reporting.py  test_cleaning.py  test_fetching_page.py  test_merge_raw_datasets.py  test_model_loader.py  test_parser.py  test_pipeline.py  test_predict.py  test_transformers.py
