[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-prediction"
version = "0.1.0"
description = "ML project for IT job salary prediction"
authors = [
    { name = "Agnieszka Zambrzycka" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
predict-salary = "prediction.cli:main"
