[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-prediction"
version = "0.1.0"
description = "ML project for IT job salary prediction"
authors = [
    { name = "Agnieszka Zambrzycka" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.46.0",
    "pandas==2.2.3",
    "numpy==2.4.3",
    "scikit-learn==1.8.0",
    "streamlit==1.50.0",
    "requests==2.32.5",
    "joblib==1.5.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "unidecode",
    "black",
    "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
predict-salary = "prediction.cli:main"
